* Sat Mar 25 2006 Shiv Kaushal <shiv@hep.man.ac.uk>
- Change delegation header to Proxy-Delegation-Service
  instead of Grst-
* Wed Mar 22 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add GRSTx509MakeDelegationID() to grst_x509.c
- Include code for new style delegation proxy storage
* Fri Mar 17 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Associate ldconfig %post in spec with -shared RPM
* Thu Mar 16 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Fixes for 200/201 error pages produced by Apache
- Fixes for onetime passcode non-removal if HTTPS
- Include new multi-RPM spec file: gridsite-shared,
  gridsite-devel, gridsite-apache, gridsite-commands
  (replacing htcp) and gridsite-gsexec
* Fri Mar 03 2006 Shiv Kaushal <shiv@hep.man.ac.uk>
- Modify GridSiteDelegationURI directive to insert HTTP 
  headers instead of modifying HTML
* Mon Feb 6 2006 Shiv Kaushal <shiv@hep.man.ac.uk>
- Add GridSiteDelegationURI directive to mod_gridsite
  to allow Firefox extension to locate delegation service
* Thu Jan 12 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add 5 minute window for VOMS attributes valid slightly
  in the future.
- Include Content-Range PUT support in mod_gridsite,
  adapted from mod_dav by David O Callaghan
- Return 201 Created when PUT creates a file
* Mon Dec 5 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Change GRIDHTTP_ONETIME to GRIDHTTP_PASSCODE 
- Remove onetime=yes default from mod_gridsite
- Update gridsite.spec and Makefile for gridsite-copy.cgi
* Wed Nov 16 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.16 ====
* Wed Nov 16 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add -fPIC option to Makefile for IA64, as suggested
  by Andreas Unterkircher.
* Wed Oct 12 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.15 ====
* Wed Oct 12 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Fix for older OpenSSL to grst_x509.c from
  Zoltan.Farkas <Zoltan.Farkas@cern.ch>
* Wed Oct 12 2005 Andrew McNab <Andrew.McNab@man.ac.uk>